force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <formula>GW_Volunteers__Campaign__r.Event_URL__c</formula>
    <label>Event URL</label>
    <type>Text</type>
</CustomField>