force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>Volunteer Job location name - e.g. &quot;WeeCycle Warehouse&quot;</description>
    <inlineHelpText>Volunteer Job location name - e.g. &quot;WeeCycle Warehouse&quot;</inlineHelpText>
    <label>Location Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>