force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Map_URL__c</fullName>
    <formula>SUBSTITUTE(&quot;https://maps.google.com/maps?q=&quot; &amp;  GW_Volunteers__Location_Street__c  &amp; &quot;,+&quot; &amp;  GW_Volunteers__Location_City__c  &amp; &quot;,+&quot; &amp; GW_Volunteers__Location__c &amp; &quot;,+&quot; &amp;  GW_Volunteers__Location_Zip_Postal_Code__c , &quot; &quot;, &quot;%20&quot;)</formula>
    <label>Map URL</label>
    <type>Text</type>
</CustomField>